--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,63 +20,77 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ド"
-        tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintEnd_toStartOf="@+id/reButton"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/reButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="レ"
-        tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="84dp" />
+        app:layout_constraintEnd_toStartOf="@+id/miButton"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/doButton" />
 
     <Button
         android:id="@+id/miButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ミ"
-        tools:layout_editor_absoluteX="154dp"
-        tools:layout_editor_absoluteY="155dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/reButton"
+        />
 
     <Button
         android:id="@+id/faButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ファ"
-        tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="231dp" />
+        app:layout_constraintEnd_toStartOf="@+id/soButton"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+         />
 
     <Button
         android:id="@+id/soButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ソ"
-        tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="307dp" />
+        app:layout_constraintEnd_toStartOf="@+id/raButton"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/faButton"
+         />
 
     <Button
         android:id="@+id/raButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ラ"
-        tools:layout_editor_absoluteX="154dp"
-        tools:layout_editor_absoluteY="355dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/soButton"
+         />
 
     <Button
         android:id="@+id/siButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="シ"
-        tools:layout_editor_absoluteX="154dp"
-        tools:layout_editor_absoluteY="403dp" />
+        app:layout_constraintEnd_toStartOf="@+id/dohButton"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+         />
 
     <Button
         android:id="@+id/dohButton"
         android:layout_width="wrap_content"
         android:layout_height="46dp"
         android:text="ド"
-        tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="461dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/siButton"
+         />
 
 </android.support.constraint.ConstraintLayout>
