--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,8 @@
         android:layout_width="370dp"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@android:color/holo_red_dark"
+        android:background="@drawable/shape_sample_do"
+        android:elevation="0dp"
         android:text="ド"
         app:layout_constraintBottom_toTopOf="@+id/reButton"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,8 +22,7 @@
         android:layout_width="340dp"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@android:color/holo_orange_dark"
-
+        android:background="@drawable/shape_sample_re"
         android:text="レ"
         app:layout_constraintBottom_toTopOf="@+id/miButton"
         app:layout_constraintTop_toBottomOf="@+id/doButton" />
@@ -32,7 +32,7 @@
         android:layout_width="300dp"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@android:color/holo_orange_light"
+        android:background="@drawable/shape_sample_mi"
         android:text="ミ"
         app:layout_constraintBottom_toTopOf="@+id/faButton"
         app:layout_constraintTop_toBottomOf="@+id/reButton" />
@@ -42,7 +42,7 @@
         android:layout_width="270dp"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@android:color/holo_green_dark"
+        android:background="@drawable/shape_sample_fa"
         android:text="ファ"
         app:layout_constraintBottom_toTopOf="@+id/soButton"
         app:layout_constraintTop_toBottomOf="@+id/miButton" />
@@ -52,7 +52,7 @@
         android:layout_width="240dp"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@android:color/holo_blue_bright"
+        android:background="@drawable/shape_sample_so"
         android:text="ソ"
         app:layout_constraintBottom_toTopOf="@+id/raButton"
         app:layout_constraintTop_toBottomOf="@+id/faButton" />
@@ -62,7 +62,7 @@
         android:layout_width="200dp"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@android:color/holo_blue_dark"
+        android:background="@drawable/shape_sample_ra"
         android:text="ラ"
         app:layout_constraintBottom_toTopOf="@+id/siButton"
         app:layout_constraintTop_toBottomOf="@+id/soButton" />
@@ -72,7 +72,7 @@
         android:layout_width="170dp"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@android:color/holo_purple"
+        android:background="@drawable/shape_sample_si"
         android:text="シ"
         app:layout_constraintBottom_toTopOf="@+id/dohButton"
         app:layout_constraintTop_toBottomOf="@+id/raButton" />
@@ -82,7 +82,7 @@
         android:layout_width="140dp"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@android:color/holo_red_light"
+        android:background="@drawable/shape_sample_doh"
         android:text="ド"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/siButton" />
